# SuperLegit1100Solutions

./: README.md  RasterGraphics.cabal  stack.yaml
src/: LambdaPrelude.hs  View.hs
src/Language/: Skompute.hs
src/Language/LambdaCalc/: Parser.hs  Syntax.hs
src/Language/Skompute/: Compiler.hs  Syntax.hs  Utils.hs
